--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ body::before {
 /* === 問題エリア === */
 .question-box{
   flex:3;
+  height: 20vh;
   background:white;
   border-radius:10px;
   padding:1vh 2vw;
@@ -269,16 +270,32 @@ body::before {
 
 /* === ボタン === */
 .buttons{
-  flex:2;
+  flex: 1 1 auto;
   display:flex;
+  height: 15vh;
   justify-content:space-between;
   align-items:stretch;
   gap:4vw;
   margin-bottom:1vh;
+  flex-wrap: nowrap; /* 折り返さない */
+}
+
+/* ボタン数に応じた幅調整 */
+.buttons:has(button:nth-child(1):last-child) button {
+  width: 60%;
+}
+
+.buttons:has(button:nth-child(2):last-child) button {
+  width: 45%;
+}
+
+.buttons:has(button:nth-child(3):last-child) button {
+  width: 30%;
+  font-size: clamp(1rem, 1.5rem, 3rem);
 }
 
 button{
-  flex:1;
+  flex: 1;                /* 均等幅 */
   background:white;
   border:7px solid var(--color-dark);
   outline:3px solid white;
@@ -292,6 +309,10 @@ button{
   flex-direction:column;
   justify-content:center;
   align-items:center;
+
+  white-space: nowrap;     /* 改行を禁止 */
+  text-overflow: ellipsis; /* はみ出しを防止 */
+  font-size: clamp(1rem, 3rem, 3rem); /* ←自動スケール 最小、推奨、最大 */
 }
 
 button.pressed{
@@ -333,7 +354,6 @@ button img{
 .cutin.active .cutin-score {
   animation: scoreGlow 1.2s ease-out forwards;
 }
-
 .cutin.active #rankSvg {
   animation: popIn 0.6s cubic-bezier(0.34, 1.56, 0.64, 1) both;
 }
@@ -481,18 +501,40 @@ button img{
 @keyframes cutinDisappear {
   0% {
     opacity: 1;
+    transform: scale(1);
   }
   50% {
-    opacity: 0.6;
+    opacity: 0.2;
   }
   100% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+}
+
+
+@keyframes bandDisappear {
+  0% {
+    transform: translate(-50%, -50%) scaleX(1);
+    opacity: 1;
+  }
+  40% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scaleX(0);
     opacity: 0;
   }
 }
 
-/* 消えるアニメ適用用クラス */
-.cutin.disappear {
-  animation: cutinDisappear 0.2s ease-in forwards;
+.cutin.disappear .cutin-content::before {
+  animation: bandDisappear 0.5s ease-out forwards;
+}
+.cutin.disappear .cutin-score {
+  animation: cutinDisappear 0.3s ease-out forwards;
+}
+.cutin.disappear #rankSvg {
+  animation: cutinDisappear 0.3s ease-out forwards;
 }
 
 
