--- a/style.css
+++ b/style.css
@@ -338,8 +338,8 @@ body::before {
 }
 
 .buttons:has(button:nth-child(3):last-child) button {
-  width: 30%;
-  font-size: clamp(1rem, 1.5rem, 3rem);
+  max-width: 30%;
+  font-size: clamp(1rem, 1.2rem, 2.5rem);
 }
 
 .buttons:has(button:nth-child(4):last-child) button {
