--- a/style2.css
+++ b/style2.css
@@ -484,6 +484,9 @@ button img{
 .cutin.active #rankSvg {
   animation: popIn 0.6s cubic-bezier(0.34, 1.56, 0.64, 1) both;
 }
+.cutin.active #countSvg {
+  animation: redCircleExpand 0.4s ease-out forwards;
+}
 
 
 .cutin-content {
@@ -553,6 +556,15 @@ button img{
   }
 }
 
+/* 連打回数/見切り秒数 */
+#countSvg {
+  height:20vh; 
+  margin-top:1vh; 
+  margin-bottom:0vh; 
+  animation: redCircleExpand 0.4s ease-out forwards;
+  z-index: -1;
+  font-size:4rem;
+}
 
 /* EXCELLENTのはねる動き */
 #rankSvg {
@@ -652,8 +664,10 @@ button img{
 .cutin.disappear #rankSvg {
   animation: cutinDisappear 0.3s ease-out forwards;
 }
-
 .cutin.disappear .cutin-img {
+  animation: cutinDisappear 0.3s ease-out forwards;
+}
+.cutin.disappear #countSvg {
   animation: cutinDisappear 0.3s ease-out forwards;
 }
 
