--- a/style2.css
+++ b/style2.css
@@ -326,10 +326,10 @@ body::before {
 
 #sukaText {
   position: fixed;
-  top: 30%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 3rem;
+  font-size: 2rem;
   color: #333;
   font-weight: bold;
   display: none;
@@ -442,6 +442,10 @@ button{
   white-space: nowrap;     /* 改行を禁止 */
   text-overflow: ellipsis; /* はみ出しを防止 */
   font-size: clamp(1rem, 2.5rem, 3rem); /* ←自動スケール 最小、推奨、最大 */
+}
+
+button.three-word{
+  font-size:2rem;
 }
 
 button.pressed{
