--- a/style2.css
+++ b/style2.css
@@ -114,6 +114,43 @@ body::before {
   to   { background-position: 0 0; }
 }
 
+/* === 初期確認画面 === */
+#first-confirm{
+  position:fixed;
+  width:80vw;
+  height:80vh;
+  display:flex;flex-direction:column;align-items:center;justify-content:center;
+  z-index:3000;
+  color:white;
+  background:rgba(255,255,255,0.15);
+  border:1px solid rgba(255,255,255,0.6);
+  border-radius:8px;
+  padding:1.2em;
+  font-size:1rem;
+  line-height:1.6;
+  box-shadow:0 3px 6px rgba(0,0,0,0.15);
+
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+#first-confirm button {
+    width: 50vw;
+    height: 10vh;
+    margin: 15px;
+    padding: 5px;
+    font-size: 1.5rem;
+    border-radius: 10px;
+}
+
+#first-confirm #back{
+    height: 7vh;
+    font-size: 1.2rem;
+    border: 5px solid var(--color-dark);
+}
+
+/* === クイズコンテナ === */
 .container{
   position: relative;
   display:flex;
