--- a/style.css
+++ b/style.css
@@ -1,12 +1,54 @@
 :root {
-  --color-dark: #002060;
-  --color-light: #3399FF;
-  --color-bg-top: #3399FF;
-  --color-bg-bottom: #0056b3;
   --color-shadow: #555555;
   --color-text: white;
   --color-mikiri: #B8860B;
   --color-renda: #953735;
+  /* -1 blue */
+  --color-dark: #002060;
+  --color-light: #3399FF;
+  --color-bg-top: #3399FF;
+  --color-bg-bottom: #0056b3;
+  /* -2 green */
+  --color-dark-2: #005020;   
+  --color-light-2: #33cc66;    
+  --color-bg-top-2: #33cc66;  
+  --color-bg-bottom-2: #007a3d; 
+  /* -3 Yellow 
+  --color-dark-3: #7a7500;
+  --color-light-3: #fff24d;
+  --color-bg-top-3: #fff266;
+  --color-bg-bottom-3: #b3a800;*/
+  /* -3 Yellow */
+  --color-dark-3: #6f6a00;
+  --color-light-3: #f2e36b;
+  --color-bg-top-3: #f2e37f;
+  --color-bg-bottom-3: #a89f00;
+  /* -4 Orange */
+  --color-dark-4: #7a3d00;
+  --color-light-4: #ffa64d;
+  --color-bg-top-4: #ffb366;
+  --color-bg-bottom-4: #cc5c00;
+  /* -5 Red */
+  --color-dark-5: #7a0010;
+  --color-light-5: #ff6675;
+  --color-bg-top-5: #ff808c;
+  --color-bg-bottom-5: #b3001f;
+
+  
+  --pastel-blue:   #6ec5ff;
+  --pastel-green:  #7ff2a4;
+  --pastel-yellow: #fff06a;
+  --pastel-orange: #ffb56a;
+  --pastel-red:    #ff7f7f;
+}
+
+.change-color-target {
+  transition:
+    color 2s linear,
+    background-color 2s linear,
+    border-color 2s linear,
+    fill 2s linear,
+    stroke 2s linear;
 }
 
 /* === 共通設定 === */
@@ -14,6 +56,10 @@ html,body{
   margin:0;padding:0;height:100%;
   background:linear-gradient(to bottom,var(--color-bg-top),var(--color-bg-bottom));
   font-family:'Helvetica Neue',sans-serif;overflow:hidden;
+}
+
+body .change-color-target {
+    transition:background-color 2s linear;
 }
 
 /* 文字選択・画像保存などを禁止 */
@@ -79,6 +125,43 @@ body::before {
   to   { background-position: 0 0; }
 }
 
+/* === 初期確認画面 === */
+#first-confirm{
+  position:fixed;
+  width:80vw;
+  height:80vh;
+  display:flex;flex-direction:column;align-items:center;justify-content:center;
+  z-index:3000;
+  color:white;
+  background:rgba(255,255,255,0.15);
+  border:1px solid rgba(255,255,255,0.6);
+  border-radius:8px;
+  padding:1.2em;
+  font-size:1rem;
+  line-height:1.6;
+  box-shadow:0 3px 6px rgba(0,0,0,0.15);
+
+  opacity: 0;
+  transform: translateY(20px);
+  transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+#first-confirm button {
+    width: 50vw;
+    height: 10vh;
+    margin: 15px;
+    padding: 5px;
+    font-size: 1.5rem;
+    border-radius: 10px;
+}
+
+#first-confirm #back{
+    height: 7vh;
+    font-size: 1.2rem;
+    border: 5px solid var(--color-dark);
+}
+
+/* === クイズコンテナ === */
 .container{
   position: relative;
   display:flex;
@@ -199,9 +282,9 @@ body::before {
 .score-value.bump {
   transform: scale(1.2);
   text-shadow:
-    0 0 8px rgba(180,220,255,1),
-    0 0 16px rgba(120,200,255,0.9),
-    0 0 28px rgba(100,180,255,0.7);
+    0 0 8px rgba(255,255,255,0.9),
+    0 0 16px rgba(255,255,255,0.8),
+    0 0 28px rgba(255,255,255,0.6);
 }
 
 /* === クイズジャンルヘッダー === */
@@ -236,7 +319,7 @@ body::before {
 }
 
 .question-box img{
-  max-width:25vh; max-height:25vh; margin-top:1vh; border-radius:8px;
+  max-width:80vw; max-height:25vh; margin-top:1vh; border-radius:8px;
 }
 
 @keyframes shake {
@@ -251,12 +334,57 @@ body::before {
   animation: shake 0.2s ease;
 }
 
-
-
 .question-box span{
   display: inline;
   color:var(--color-light);
 }
+
+#tap-gauge {
+  position: absolute;
+  right: 20px;
+  top: 35vh;
+  transform: translateY(-50%);
+  width: 15px;
+  height: 25vh;
+  background: #FFF;
+  border: 3px solid var(--color-dark);
+  border-radius: 0px;
+}
+
+#tap-count{
+  color:var(--color-dark);
+  position: absolute;
+  top: -30px;
+  width: 50px;
+  text-align: center;
+  font-size: 18px;
+  right:-18px;
+}
+
+#tap-fill {
+  position: absolute;
+  bottom: -3px;
+  left: -3px;
+  width: 100%;
+  height: 0%;
+  background: #ff3b3b;
+  border: 3px solid var(--color-dark);
+  /* transition: height 0.1s linear; */
+}
+
+#sukaText {
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  color: #333;
+  font-weight: bold;
+  display: none;
+  pointer-events: none;
+  z-index: 1000;
+}
+
 
 /* === タイマー === */
 .timer-container{
@@ -364,6 +492,10 @@ button{
   font-size: clamp(1rem, 2.5rem, 3rem); /* ←自動スケール 最小、推奨、最大 */
 }
 
+button.three-word{
+  font-size:2rem;
+}
+
 button.pressed{
   background:var(--color-dark);
   color:var(--color-text);
@@ -412,7 +544,6 @@ button img{
   max-width:60%; margin-top:0.5vh; border-radius:6px;
 }
 
-
 .banner{
   flex: 1;
 }
@@ -446,6 +577,9 @@ button img{
 }
 .cutin.active #rankSvg {
   animation: popIn 0.6s cubic-bezier(0.34, 1.56, 0.64, 1) both;
+}
+.cutin.active #countSvg {
+  animation: redCircleExpand 0.4s ease-out forwards;
 }
 
 
@@ -516,6 +650,15 @@ button img{
   }
 }
 
+/* 連打回数/見切り秒数 */
+#countSvg {
+  height:20vh; 
+  margin-top:1vh; 
+  margin-bottom:0vh; 
+  animation: redCircleExpand 0.4s ease-out forwards;
+  z-index: -1;
+  font-size:4rem;
+}
 
 /* EXCELLENTのはねる動き */
 #rankSvg {
@@ -615,8 +758,10 @@ button img{
 .cutin.disappear #rankSvg {
   animation: cutinDisappear 0.3s ease-out forwards;
 }
-
 .cutin.disappear .cutin-img {
+  animation: cutinDisappear 0.3s ease-out forwards;
+}
+.cutin.disappear #countSvg {
   animation: cutinDisappear 0.3s ease-out forwards;
 }
 
@@ -629,8 +774,13 @@ button img{
   justify-content:center;z-index:2000;
 }
 .count-number{
+  color:#FFF;
   font-size:5rem;font-weight:bold;margin-bottom:10vh;
   opacity: 0;
+}
+.buttons .count-number{
+  width:100%;
+  text-align: center;
 }
 @keyframes moveUp{
   0%{transform:translateY(100%);opacity:0}
@@ -642,7 +792,7 @@ button img{
 /* === ローディング画面 === */
 #loading-overlay{
   position:fixed;top:0;left:0;width:100%;height:100%;
-  //background:#333;
+  /*background:#333;*/
   color:white;
   display:flex;flex-direction:column;
   align-items:center;justify-content:center;
@@ -650,12 +800,14 @@ button img{
 }
 .loading-bar{
   width:60%;height:10px;
-  background:#555;border-radius:10px;
+  border: 3px solid var(--color-dark);
+  background:var(--color-dark);
+  border-radius:10px;
   overflow:hidden;margin-top:1rem;
 }
 .loading-progress{
   width:0%;height:100%;
-  background:#00ccff;
+  background:var(--color-light);
   border-radius:10px;
   transition:width 3s linear;
 }
