--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@
   --color-light-2: #33cc66;    
   --color-bg-top-2: #33cc66;  
   --color-bg-bottom-2: #007a3d; 
-  /* -3 Yellow 
+  /* -3 Yellow */
   --color-dark-3: #7a7500;
   --color-light-3: #fff24d;
   --color-bg-top-3: #fff266;
-  --color-bg-bottom-3: #b3a800;*/
-  /* -3 Yellow */
+  --color-bg-bottom-3: #b3a800;
+  /* -3 Yellow 
   --color-dark-3: #6f6a00;
   --color-light-3: #f2e36b;
   --color-bg-top-3: #f2e37f;
-  --color-bg-bottom-3: #a89f00;
+  --color-bg-bottom-3: #a89f00;*/
   /* -4 Orange */
   --color-dark-4: #7a3d00;
   --color-light-4: #ffa64d;
@@ -129,8 +129,12 @@ body::before {
 #first-confirm{
   position:fixed;
   width:80vw;
+  top:5vw;
   height:80vh;
-  display:flex;flex-direction:column;align-items:center;justify-content:center;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  /*justify-content:center;*/
   z-index:3000;
   color:white;
   background:rgba(255,255,255,0.15);
@@ -158,7 +162,9 @@ body::before {
 #first-confirm #back{
     height: 7vh;
     font-size: 1.2rem;
-    border: 5px solid var(--color-dark);
+    color:var(--color-shadow);
+    border: 5px solid var(--color-shadow);
+    border-radius: 10px;
 }
 
 /* === クイズコンテナ === */
