--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@
   --color-light-2: #33cc66;    
   --color-bg-top-2: #33cc66;  
   --color-bg-bottom-2: #007a3d; 
-  /* -3 Yellow */
+  /* -3 Yellow 
   --color-dark-3: #7a7500;
   --color-light-3: #fff24d;
   --color-bg-top-3: #fff266;
-  --color-bg-bottom-3: #b3a800;
-  /* -3 Yellow 
+  --color-bg-bottom-3: #b3a800; */
+  /* -3 Yellow */
   --color-dark-3: #6f6a00;
   --color-light-3: #f2e36b;
   --color-bg-top-3: #f2e37f;
-  --color-bg-bottom-3: #a89f00;*/
+  --color-bg-bottom-3: #a89f00;
   /* -4 Orange */
   --color-dark-4: #7a3d00;
   --color-light-4: #ffa64d;
