--- a/style.css
+++ b/style.css
@@ -85,16 +85,18 @@ img {
 body {
   position:relative;
   inset:0;
+  /*
   background-image: 
     repeating-linear-gradient(90deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
     repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px);
   background-size: 40px 40px, 40px 40px, 200px 200px, 300px 300px;
   background-position: 100% 100%;
   animation: movePattern 50s linear infinite;
+  */
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: contain;
-  min-height: 100vh;
+  min-height: 100dvh;
   padding-top: env(safe-area-inset-top);
 }
 
@@ -102,13 +104,14 @@ body {
   display: flex;
   justify-content: center; /* 横方向中央 */
   align-items: center;     /* 縦方向中央 */
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
   margin: 0; /* 不要な余白を除去 */
 
   opacity:0;
-  animation: fadeInGrid 0.5s ease-out forwards,
-             flashGrid 1.5s ease-out forwards;
+  animation: fadeInGrid 0.5s ease-out forwards;
+  /*           flashGrid 1.5s ease-out forwards;
+             */
 }
 
 body::before {
@@ -125,8 +128,16 @@ body::before {
 
 /* ボタン押下で付与するクラス */
 body.grid-restart {
-  animation: flashGrid 0.5s ease-out forwards,
-             movePattern 50s linear infinite;
+  
+  background-image: 
+    repeating-linear-gradient(90deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px),
+    repeating-linear-gradient(0deg, rgba(255,255,255,0.3) 0 1px, transparent 1px 40px);
+  background-size: 40px 40px, 40px 40px, 200px 200px, 300px 300px;
+  background-position: 100% 100%;
+  
+  animation: movePattern 50s linear infinite;
+  opacity:1;
+  /*flashGrid 0.5s ease-out forwards,*/
 }
 
 @keyframes fadeInGrid {
@@ -159,7 +170,7 @@ body.grid-restart {
   position:fixed;
   width:80vw;
   top:5vw;
-  height:80vh;
+  height:80dvh;
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -178,6 +189,16 @@ body.grid-restart {
   opacity: 0;
   transform: translateY(20px);
   transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+#first-confirm.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+#first-confirm.hide {
+  opacity:0;
+  transform: translateY(20px);
 }
 
 .first-confirm-title{
@@ -246,14 +267,14 @@ body.grid-restart {
 
 #first-confirm button {
     width: 50vw;
-    height: 10vh;
+    height: 10dvh;
     padding: 5px;
     font-size: 1.5rem;
     border-radius: 10px;
 }
 
 #first-confirm #back{
-    height: 7vh;
+    height: 7dvh;
     font-size: 1.2rem;
     color:var(--color-shadow);
     border: 5px solid var(--color-shadow);
@@ -267,22 +288,22 @@ body.grid-restart {
   display:flex;
   flex-direction:column;
   justify-content:space-between;
-  height:95vh;
+  height:95dvh;
   width: 100%;
-  max-width:60vh;
-  margin: 5vh 5vw;
+  max-width:60dvh;
+  margin: 5dvh 5vw;
   box-sizing:border-box;
 }
 
 /* === ステージ情報エリア === */
 .stage-info {
   position: relative; 
-  margin: 0 auto 2vh; 
+  margin: 0 auto 2dvh; 
   display: flex;
   align-items: center;
   line-height: 1;
   justify-content: space-between;
-  width: calc(100% - 4vh);
+  width: calc(100% - 4dvh);
   max-width: 500px;
   background: rgba(0, 0, 0, 0.2);
   color: white;
@@ -302,14 +323,14 @@ body.grid-restart {
 }
 
 .stage-info.appear{
-  animation: bandExpand 1s ease-out forwards;
+  animation: bandExpand 0.5s ease-out forwards;
 }
 
 .stage-info *{
   opacity: 0;
 }
 .stage-info.appear *{
-  animation: stageInfoPartsAppear 1s ease-out forwards;
+  animation: stageInfoPartsAppear 0.5s ease-out forwards;
 }
 
 @keyframes stageInfoPartsAppear {
@@ -425,15 +446,15 @@ body.grid-restart {
 /* === 問題エリア === */
 .question-box{
   /*flex:3;*/
-  height: 30vh;
+  height: 30dvh;
   background:white;
   border-radius:10px;
-  padding:2vh 2vw;
+  padding:2dvh 2vw;
   text-align:center;
   font-size:1.3rem;
   font-weight:bold;
   box-shadow:0 3px 10px rgba(0,0,0,0.1);
-  margin-top:1vh;
+  margin-top:1dvh;
   display:flex;
   flex-direction:column;
   justify-content:center;
@@ -442,7 +463,7 @@ body.grid-restart {
 }
 
 .question-box img{
-  max-width:80vw; max-height:25vh; margin-top:1vh; border-radius:8px;
+  max-width:80vw; max-height:25dvh; margin-top:1dvh; border-radius:8px;
 }
 
 @keyframes shake {
@@ -465,10 +486,10 @@ body.grid-restart {
 #tap-gauge {
   position: absolute;
   right: 20px;
-  top: 35vh;
+  top: 35dvh;
   transform: translateY(-50%);
   width: 15px;
-  height: 20vh;
+  height: 20dvh;
   background: #FFF;
   border: 3px solid var(--color-dark);
   border-radius: 0px;
@@ -512,7 +533,7 @@ body.grid-restart {
 /* === タイマー === */
 .timer-container{
   /*flex:0.8;*/
-  height:8vh;
+  height:8dvh;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -558,23 +579,23 @@ body.grid-restart {
 .buttons{
   flex: 1 1 auto;
   display:flex;
-  height: 15vh;
+  height: 15dvh;
   width: 100%;
   justify-content:space-between;
   align-items:stretch;
   gap:4vw;
   gap:15px;
-  margin-bottom:1vh;
+  margin-bottom:1dvh;
   flex-wrap: nowrap; /* 折り返さない */
 }
 
 .buttons.two-row {
   display: grid;
-  height: 20vh;
+  height: 20dvh;
   grid-template-columns: repeat(2, 1fr); /* 2列 */
   grid-template-rows: repeat(2, 1fr);    /* 2行 */
   width: 100%;
-  margin-bottom: 1vh;
+  margin-bottom: 1dvh;
 }
 
 .buttons.two-row button {
@@ -619,7 +640,7 @@ button{
 }
 
 .buttons.two-row button{
-  background-Size:calc(16vh), auto;
+  background-Size:calc(16dvh), auto;
 }
 
 button.three-word{
@@ -671,7 +692,7 @@ button.pressed{
 }
 
 button img{
-  max-width:60%; margin-top:0.5vh; border-radius:6px;
+  max-width:60%; margin-top:0.5dvh; border-radius:6px;
 }
 
 button.imgbtn{
@@ -771,10 +792,10 @@ button.imgbtn.pressed{
 /* カットイン〇×画像 */
 .cutin-img {
   width:80vw; 
-  height:25vh; 
+  height:25dvh; 
   object-fit: contain; /* 比率維持で収める */
-  margin-top:1vh; 
-  margin-bottom:0vh; 
+  margin-top:1dvh; 
+  margin-bottom:0dvh; 
   animation: redCircleExpand 0.4s ease-out forwards;
   z-index: -1;
 }
@@ -795,9 +816,9 @@ button.imgbtn.pressed{
 
 /* 連打回数/見切り秒数 */
 #countSvg {
-  height:20vh; 
-  margin-top:1vh; 
-  margin-bottom:0vh; 
+  height:20dvh; 
+  margin-top:1dvh; 
+  margin-bottom:0dvh; 
   animation: redCircleExpand 0.4s ease-out forwards;
   z-index: -1;
   font-size:4rem;
@@ -918,7 +939,7 @@ button.imgbtn.pressed{
 }
 .count-number{
   color:#FFF;
-  font-size:5rem;font-weight:bold;margin-bottom:10vh;
+  font-size:5rem;font-weight:bold;margin-bottom:10dvh;
   opacity: 0;
 }
 .buttons .count-number{
@@ -977,7 +998,7 @@ button.imgbtn.pressed{
 #stage-title{
   font-size:2rem;
   font-weight:bold;
-  margin-bottom:2vh;
+  margin-bottom:2dvh;
   color:white;
   text-align:center;
   text-shadow:
