--- a/style.css
+++ b/style.css
@@ -1098,3 +1098,13 @@ button.imgbtn.pressed{
   40%  { transform: scale(1); }
   100% { transform: scale(1); }
 }
+
+.float {
+  animation: float 1s ease-in-out infinite;
+}
+
+/* アニメーション */
+@keyframes float {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-20px); }
+}
